--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+#datasource
+spring.datasource.url=jdbc:mysql://localhost:3306/note?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.data.jpa.repositories.enabled=true
+spring.datasource.sql-script-encoding=utf-8
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
