--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,16 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.data.jpa.repositories.enabled=true
 spring.datasource.sql-script-encoding=utf-8
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# oAuth2
+security.oauth2.client.access-token-validity-seconds=5000000
+security.oauth2.client.refresh-token-validity-seconds=10000000
+security.oauth2.client.client-id=client
+security.oauth2.client.client-secret=secret
+security.oauth2.client.scope=read,write
+security.oauth2.client.authorized-grant-types=password,refresh_token
+oauth2.signing-key=123
+
+spring.jpa.open-in-view=false
