--- a/pom.xml
+++ b/pom.xml
@@ -56,10 +56,10 @@
             <version>0.6.0</version>
         </dependency>
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+
     </dependencies>
 
     <build>
